--- a/LinqMarbles.csproj
+++ b/LinqMarbles.csproj
@@ -13,4 +13,9 @@
         <PackageReference Include="MudBlazor" Version="6.11.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap\bootstrap.min.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap\bootstrap.min.css.map" />
+    </ItemGroup>
+
 </Project>
