--- a/LinqMarbles.csproj
+++ b/LinqMarbles.csproj
@@ -19,7 +19,7 @@
 
     <ItemGroup>
         <ServiceWorker Include="wwwroot/service-worker.js"
-                       PublishedContent="wwwroot/aservice-worker.published.js" />
+                       PublishedContent="wwwroot/service-worker.published.js" />
     </ItemGroup>
     
 </Project>
