--- a/.github/workflows/main_linqmarbles.yml
+++ b/.github/workflows/main_linqmarbles.yml
@@ -17,12 +17,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up .NET Core
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.x'
-          include-prerelease: true
 
-      - name: Build with dotnet
+      - name: Build
         run: dotnet build --configuration Release
 
       - name: dotnet publish
