Select project and use path inside folder

--- a/.github/workflows/main_linqmarbles.yml
+++ b/.github/workflows/main_linqmarbles.yml
@@ -22,13 +22,13 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}\myapp
+        run: dotnet publish -c Release LinqMarbles/LinqMarbles.csproj -o ./dist
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ./dist
 
   deploy:
     runs-on: windows-latest
